added an example for ui:Choise in structures4 and fixed bugs in forms for ui:choice

--- a/Documentation/form-examples/structures.html
+++ b/Documentation/form-examples/structures.html
@@ -44,6 +44,7 @@
         summary="Table of input data values and UI outputs generated"
       >
         <tbody>
+          <tr><td>Form data</td><td>Raw data</td><td>Form</td></tr>
           <tr class="form-demo">
             <td class="input">
               <pre>
