--- a/Documentation/form-examples/structures2.html
+++ b/Documentation/form-examples/structures2.html
@@ -74,7 +74,7 @@
               @prefix : &lt;#>.
 
               :OrganizationCreationForm a ui:Form; 
-                  ui:label "Select an orga type:";
+                  ui:label "Select an organization type:";
                   schema:name "Form for editing an organization using public data" ;
                   ui:parts ( :OrgClassifier :OrgSwitch :OrganizationNameField :homePageURIField  ) .
 
