--- a/Documentation/form-examples/structures4.html
+++ b/Documentation/form-examples/structures4.html
@@ -7,7 +7,7 @@
         content="HTML Tidy for Mac OS X (vers 31 October 2006 - Apple Inc. build 15.17), see www.w3.org" />
     <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
 
-    <title>Form structures 2 - Classifier and Choice</title>
+    <title>Form structures 4 - Choice</title>
     <link type="text/css" rel="stylesheet" href="../style/demo-style.css" />
 
     <!-- used for production ready documentation -->
@@ -24,7 +24,7 @@
 
 <body>
 
-    <h1>Form structures 2 - Classifier, Choice and Autocomplete</h1>
+    <h1>Form structures 4 - Choice</h1>
     <pre id="Prolog">
     @prefix foaf:  &lt;http://xmlns.com/foaf/0.1/&gt;.
     @prefix sched: &lt;http://www.w3.org/ns/pim/schedule#&gt;.
@@ -33,7 +33,7 @@
     @prefix rdfs:  &lt;http://www.w3.org/2000/01/rdf-schema#&gt;.
     @prefix ui:    &lt;http://www.w3.org/ns/ui#&gt;.
 
-          @prefix schema: &lt;http://schema.org/>.
+    @prefix schema: &lt;http://schema.org/>.
 
     @prefix trip:  &lt;http://www.w3.org/ns/pim/trip#&gt;.
     @prefix vcard: &lt;http://www.w3.org/2006/vcard/ns#&gt;.
@@ -53,9 +53,10 @@
                 </tr>
                 <tr class="form-demo">
                     <td class="input"
-                        source="https://timea.solidcommunity.net/HelloWorld/components/editData/helloWorldForm.ttl#this">
+                        source="https://solidos.solidcommunity.net/public/2021/solidUiFormTestData/ChoiceFormExample.ttl#this">
                     </td>
                     <td class="target" source="https://timea.solidcommunity.net/HelloWorld/data/helloWorld.ttl#Examples"></td>
+                    <!-- <td class="target" source="https://solidos.solidcommunity.net/public/2021/solidUiFormTestData/DataExampleForFormsTest.ttl#Examples"></td> -->
                     <td class="output"></td>
                 </tr>
             </tbody>
