--- a/Documentation/form-examples/edit-form.html
+++ b/Documentation/form-examples/edit-form.html
@@ -11,9 +11,9 @@
     
     <!-- used for production ready documentation -->
     <!-- note: one does not need whole mashlib, solid-ui is sufficient also -->
-    <!--<script type="text/javascript" src="https://solidos.github.io/mashlib/dist/mashlib.js"></script> -->
+    <script type="text/javascript" src="https://solidos.github.io/mashlib/dist/mashlib.js"></script>
     <!-- to use only solid-ui -->
-    <script type="text/javascript" src="https://solidos.github.io/solid-ui/dist/main.js"></script>
+    <!--<script type="text/javascript" src="https://solidos.github.io/solid-ui/dist/main.js"></script> -->
     
     <!-- used for local development -->
     <!-- make sure to use the latest build version by running npm run build-form-examples first -->
