--- a/Documentation/form-examples/structures3.html
+++ b/Documentation/form-examples/structures3.html
@@ -22,7 +22,7 @@
 
   <body>
 
-    <h1>Form structures 3 - Classifier, Choice and Autocomplete</h1>
+    <h1>Form structures 3 - Classifier, Choice, and Autocomplete</h1>
     <pre id="Prolog">
     @prefix foaf:  &lt;http://xmlns.com/foaf/0.1/&gt;.
     @prefix sched: &lt;http://www.w3.org/ns/pim/schedule#&gt;.
