improvements and test fixes

--- a/Documentation/form-examples/structures2.html
+++ b/Documentation/form-examples/structures2.html
@@ -55,239 +55,11 @@
           </tr>
           <tr class="form-demo">
             <td class="input" source="https://solidos.github.io//solid-panes/src/profile/profileFormText.ttl#OrganizationCreationForm">
-              <pre>
-              # 20210404a
-              @prefix rdf: &lt;http://www.w3.org/1999/02/22-rdf-syntax-ns#>.
-              @prefix rdfs: &lt;http://www.w3.org/2000/01/rdf-schema#>.
-              @prefix foaf: &lt;http://xmlns.com/foaf/0.1/>.
-              @prefix owl: &lt;http://www.w3.org/2002/07/owl#>.
-              @prefix solid: &lt;http://www.w3.org/ns/solid/terms#>.
-              @prefix ui: &lt;http://www.w3.org/ns/ui#>.
-              @prefix schema: &lt;http://schema.org/>.
-              @prefix vcard: &lt;http://www.w3.org/2006/vcard/ns#>.
-
-              @prefix org: &lt;http://www.w3.org/ns/org#>.
-              @prefix esco: &lt;http://data.europa.eu/esco/model#>.
-              @prefix wd: &lt;http://www.wikidata.org/entity/>.
-              @prefix wdt: &lt;http://www.wikidata.org/prop/direct/>.
-
-              @prefix : &lt;#>.
-
-              :OrganizationCreationForm a ui:Form; 
-                  ui:label "Select an organization type:";
-                  schema:name "Form for editing an organization using public data" ;
-                  ui:parts ( :OrgClassifier :OrgSwitch :OrganizationNameField :homePageURIField  ) .
-
-               :OrgClassifier a ui:Classifier; ui:label "What sort of organization?"@en;
-                  ui:category solid:InterestingOrganization .
-
-                solid:InterestingOrganization owl:disjointUnionOf (
-                  # Airline - a Corporation
-                  # Consortium - a Corporation or a NGO
-                  schema:Corporation
-                  schema:EducationalOrganization
-                  schema:ResearchOrganization # Proposed. https://github.com/schemaorg/schemaorg/issues/2877
-                  # FundingScheme - eh?
-                  schema:GovernmentOrganization
-                  # LibrarySystem
-                  # LocalBusiness - Corporation
-                  # MedicalOrganization - a Corporation or a NGO
-                  schema:NGO
-                  # NewsMediaOrganization - a Corporation or a NGO
-                  schema:PerformingGroup # a band
-                  schema:Project # like Solid
-                  schema:SportsOrganization # a Team
-                  solid:OtherOrganization
-                ) .
-
-                :OrganizationNameField
-                    a ui:SingleLineTextField ;
-                    ui:label "Organization Name";
-                    ui:maxLength "200" ;
-                    ui:property schema:name ;
-                    ui:size    80 .
-
-                 :homePageURIField a ui:NamedNodeURIField; ui:size 80;
-                    ui:label "Home page URI"@en;
-                    ui:property  schema:uri . # @@ ??
-
-              #  Depending on the type of org, chose a different form
-
-               :OrgSwitch a ui:Options; ui:label "Chose orga"; ui:dependingOn rdf:type;
-                 ui:case
-                 [ ui:for schema:Corporation; ui:use :CorporationForm ],
-                 [ ui:for schema:GovernmentOrganization; ui:use :GovernmentOrganizationForm ],
-                 [ ui:for schema:PerformingGroup; ui:use :PerformingGroupForm ],
-                 [ ui:for schema:Project; ui:use :ProjectForm ],
-                 [ ui:for schema:NGO; ui:use :NGOForm ],
-                 [ ui:for schema:EducationalOrganization; ui:use :EducationalOrganizationForm ],
-                 [ ui:for schema:ResearchOrganization; ui:use :ResearchOrganizationForm ],
-                 [ ui:for :SportsOrganization; ui:use :SportsOrganizationForm ],
-                 [ ui:for solid:OtherOrganization; ui:use :OtherOrganizationForm ].
-
-
-                :CorporationForm a ui:Group; ui:weight 0; ui:parts ( :CorporationPrompt :CorporationAutocomplete ) .
-
-                    :CorporationPrompt a ui:Comment; ui:contents "Which corporation?".
-
-                    :CorporationAutocomplete a ui:AutocompleteField;
-                    a ui:AutocompleteField; ui:label "Corporation in wikidata";
-                         ui:size 60;
-                         ui:targetClass  &lt;http://www.wikidata.org/entity/Q6881511>; # Enterprise
-                         ui:property solid:publicId; ui:dataSource :WikidataInstancesByName.
-
-                    :WikidataInstancesByName a ui:DataSource ;
-                      schema:name "Wikidata instances by name";
-                      ui:endpoint "https://query.wikidata.org/sparql" ;
-                      ui:searchByNameQuery """SELECT ?subject ?name
-                      WHERE {
-                        ?klass wdt:P279* $(targetClass) .
-                        ?subject wdt:P31 ?klass .
-                        ?subject rdfs:label ?name.
-                        FILTER regex(?name, "$(name)", "i")
-                      } LIMIT $(limit) """ ;
-
-                      # Note this form of the query is very experimental
-                      ui:searchByName [   ui:construct { ?subject schema:name ?name } ;
-                                          ui:where { ?klass wdt:P279 ?targetClass .
-                                                     ?subject wdt:P31 ?klass; rdfs:label ?name .
-                                                   };
-                                      ].
-
-                :GovernmentOrganizationForm a ui:Group; ui:weight 0; ui:parts ( :GovernmentOrganizationPrompt :GovernmentOrganizationAutocomplete ) .
-
-                    :GovernmentOrganizationPrompt a ui:Comment; ui:contents "Which GovernmentOrganization aree you?".
-
-                    :GovernmentOrganizationAutocomplete
-                    a ui:AutocompleteField; ui:label "GovernmentOrganization in wikidata";
-                         ui:size 60;
-                         ui:targetClass  &lt;http://www.wikidata.org/entity/Q327333>; # GovernmentOrganization
-                         ui:property solid:publicId; ui:dataSource :WikidataInstancesByName.
-
-                  :EducationalOrganizationForm a ui:Group; ui:weight 1; ui:parts ( :EducationalOrganizationPrompt :EducationalOrganizationAutocomplete ) .
-
-                      :EducationalOrganizationPrompt a ui:Comment; ui:contents "Which Educational Organization?".
-
-                      :EducationalOrganizationAutocomplete
-                      a ui:AutocompleteField; ui:label "Educational Organization in wikidata";
-                           ui:size 60;
-                           ui:targetClass  &lt;http://www.wikidata.org/entity/Q2385804>; # EducationalOrganization
-                           ui:property solid:publicId; ui:dataSource :WikidataInstancesByName.
-
-
-                  :ResearchOrganizationForm a ui:Group; ui:weight 0; ui:parts ( :ResearchOrganizationPrompt :ResearchOrganizationAutocomplete ) .
-
-                      :ResearchOrganizationPrompt a ui:Comment; ui:contents "Which Research Organization?".
-
-                      :ResearchOrganizationAutocomplete
-                      a ui:AutocompleteField; ui:label "Research Insitute in wikidata";
-                           ui:size 60;
-                           ui:targetClass  &lt;http://www.wikidata.org/entity/Q31855>; # research institute
-                           ui:property solid:publicId; ui:dataSource :WikidataInstancesByName.
-
-
-                :NGOForm a ui:Group; ui:weight 0; ui:parts ( :NGOPrompt :NGOAutocomplete ) .
-
-                    :NGOPrompt a ui:Comment; ui:contents "Which NGO?".
-
-                    :NGOAutocomplete
-                    a ui:AutocompleteField; ui:label "NGO in wikidata";
-                         ui:size 60;
-                         ui:targetClass  &lt;http://www.wikidata.org/entity/Q163740>; # Non-profit org
-                         ui:property solid:publicId; ui:dataSource :WikidataInstancesByName.
-
-                :PerformingGroupForm a ui:Group; ui:weight 0; ui:parts ( :PerformingGroupPrompt :PerformingGroupAutocomplete ) .
-
-                    :PerformingGroupPrompt a ui:Comment; ui:contents "Which PerformingGroup?".
-
-                    :PerformingGroupAutocomplete
-                    a ui:AutocompleteField; ui:label "Performing Group in wikidata";
-                         ui:size 60;
-                         ui:targetClass  &lt;http://www.wikidata.org/entity/Q32178211>; # Music Org
-                         ui:property solid:publicId; ui:dataSource :WikidataInstancesByName.
-
-
-                :ProjectForm a ui:Group; ui:weight 0; ui:parts ( :ProjectPrompt :ProjectAutocomplete ) . #  :ProjectAutocomplete - no: supress, as not in WD
-
-                    :ProjectPrompt a ui:Comment; ui:contents "Which Project?".
-
-                    :ProjectAutocomplete
-                    a ui:AutocompleteField; ui:label "Project in wikidata";
-                         ui:size 60;
-                         ui:targetClass  &lt;http://www.wikidata.org/entity/Q170584>; # Project
-                         ui:property solid:publicId; ui:dataSource :WikidataInstancesByName.
-
-                :SportsOrganizationForm a ui:Group; ui:weight 0; ui:parts ( :SportsOrganizationPrompt :SportsOrganizationAutocomplete ) .
-
-                    :SportsOrganizationPrompt a ui:Comment; ui:contents "Which Sports Organization?".
-
-                    :SportsOrganizationAutocomplete
-                    a ui:AutocompleteField; ui:label "SportsOrganization in wikidata";
-                         ui:size 60;
-                         ui:targetClass  &lt;http://www.wikidata.org/entity/Q4438121>; # SportsOrganization
-                         ui:property solid:publicId; ui:dataSource :WikidataInstancesByName.
-
-                 :OtherOrganizationForm a ui:Group; ui:weight 0; ui:parts ( :OrganizationNameField :homePageURIField ) .
-
-                </pre>
             </td>
             <td
               class="target"
-              source="https://solidos.solidcommunity.net/public/2021/solidUiFormTestData/organisationDataExample.ttl#org1"
-            >
-            <pre>
-              @prefix : &lt;#>.
-              @prefix acl: &lt;http://www.w3.org/ns/auth/acl#>.
-              @prefix foaf:
-              &lt;http://xmlns.com/foaf/0.1/>.
-              @prefix ldp: &lt;http://www.w3.org/ns/ldp#>.
-              @prefix org: &lt;http://www.w3.org/ns/org#>.
-              @prefix schema:
-              &lt;http://schema.org/>.
-              @prefix solid: &lt;http://www.w3.org/ns/solid/terms#>.
-              @prefix space: &lt;http://www.w3.org/ns/pim/space#>.
-              @prefix vcard: &lt;http://www.w3.org/2006/vcard/ns#>.
-              @prefix xsd: &lt;http://www.w3.org/2001/XMLSchema#>.
-              @prefix pro: &lt;./>.
-              @prefix inbox: &lt;/inbox/>.
-              @prefix tes: &lt;>.
-              @prefix l:
-              &lt;https://www.w3.org/ns/iana/language-code/>.
-              @prefix ent:
-              &lt;http://www.wikidata.org/entity/>.
-              @prefix not:
-              &lt;https://notthereal.apple.com/>.
-              @prefix www:
-              &lt;https://www.thebeatles.com/>.
-              @prefix ww:
-              &lt;https://www.nasa.gov/>.
-              @prefix occup:
-              &lt;http://data.europa.eu/esco/occupation/>.
-              @prefix c: &lt;https://solidos.solidcommunity.net/profile/card#>.
-              @prefix skill:
-              &lt;http://data.europa.eu/esco/skill/>.
-              @prefix wikidata:
-              &lt;http://www.wikidata.org/entity/>.
-
-              
-                    wikidata:Q875914 schema:name "Kreischberg"@en.
-                    
-                    :id1621184812427
-                      a solid:FutureRole;
-                      schema:description "Second future role";
-                      schema:startDate "2023-12-25"^^xsd:date;
-                      vcard:role "Mission a Mars";
-                      org:member :me;
-                      org:organization :org1;
-                      org:role occup:6b0ad7c0-a37f-45c6-a486-ee943a11429e.
-                    :org1
-                      a schema:GovernmentOrganization, wikidata:Q6881511;
-                      schema:name "Kreischberg", "kreischberg";
-                      schema:uri ww:;
-                      solid:publicId wikidata:Q875914 .
-
-
-            </pre></td>
+              source="https://solidos.solidcommunity.net/public/2021/solidUiFormTestData/organisationDataExample.ttl#org1">
+            </td>
             <td class="output"></td>
           </tr>
 
